@@ -5,6 +5,7 @@ import com.edunext.edutrack.domain.identity.UserRepository;
 import org.springframework.stereotype.Component;
 
 import java.util.Collection;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
@@ -32,8 +33,14 @@ class TransitionUserRefs {
      * @param ids may contain nulls and duplicates — a stage nobody has ever
      *            entered has no owner to resolve
      * @return ids that named a real user, mapped to their reference. A missing
-     *         entry renders as a null {@code owner} rather than an invented
-     *         placeholder, {@code EffortLogUserRefs}' own rule.
+     *         entry — including a {@code null} id itself, a skip's departure
+     *         hop never resolves one — renders as a null {@code owner} rather
+     *         than an invented placeholder, {@code EffortLogUserRefs}' own
+     *         rule. Backed by a plain {@code HashMap} rather than {@code
+     *         Map.of}/{@code Map.copyOf}: the JDK's immutable maps throw on
+     *         {@code get(null)} instead of answering "not present", which a
+     *         caller doing {@code owners.get(hop.getToUserId())} has no reason
+     *         to guard against on its own.
      */
     Map<Long, RibbonWire.UserRef> resolve(Collection<Long> ids) {
         Set<Long> wanted = new HashSet<>();
@@ -43,7 +50,7 @@ class TransitionUserRefs {
             }
         }
         if (wanted.isEmpty()) {
-            return Map.of();
+            return Collections.emptyMap();
         }
 
         List<User> found = users.findAllById(wanted);
@@ -54,7 +61,7 @@ class TransitionUserRefs {
             }
             refs.put(user.getId(), new RibbonWire.UserRef(user.getId(), displayNameOf(user)));
         }
-        return Map.copyOf(refs);
+        return Collections.unmodifiableMap(refs);
     }
 
     /** {@code full_name}, falling back to the username — {@code CommentUserRefs}' rule, verbatim. */
